# csql

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Doxyfile.full  Makefile.am  Makefile.cvs  Makefile.in  README  README.INSTALL  TODO  aclocal.m4  build.ksh  buildmmdb.ksh  cachetable.sql  config.h.in  configure  configure.in  csql.conf  csql.conf.mmdb  csql.kdevelop  csql.kdevelop.pcs  csql.kdevses  csqlinstall.ksh  csqlinstallmmdb.ksh  csqlnw.conf  csqltable.conf  dos2unix.sh  odbc.ini  setupenv.ksh  setupenv.ksh.install  trigger.psql  trigger.sql
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
demo/multinode/: README  create.sql  insert.sql  mysqllog.sql  trigger.sql
demo/wisc/: JDBCBench.java  JDBCPopulate.java  Makefile  README  odbcBench.c
examples/dbapi/: Makefile  README  dbapiexample.c  manDBAPIdelete.c  manDBAPIinsert.c  manDBAPIupdate.c
examples/isql/: README  create.sql  delete.sql  drop.sql  insert.sql  select.sql
examples/jdbc/: Makefile  README  gwexample.java  jdbcexample.java
examples/odbc/: Makefile  ODBCman1.c  ODBCman2.c  ODBCman3.c  ODBCman4.c  ODBCman5.c  ODBCman6.c  README  odbcexample.c
examples/php/: README  phpexample.php
include/: AbsSqlConnection.h  AbsSqlStatement.h  AggTableImpl.h  Allocator.h  CSql.h  CacheTableLoader.h  CatalogTables.h  Config.h  DataType.h  DataTypeInline.h  Database.h  DatabaseManager.h  DatabaseManagerImpl.h  Debug.h  ErrorType.h  Expression.h  FaultTest.h  Field.h  Function.h  Globals.h  HeapAllocator.h  Index.h  Info.h  JoinTableImpl.h  Lock.h  Makefile.am  Makefile.in  Mutex.h  NanoTimer.h  Network.h  OrderByTree.h  OrderTableImpl.h  Parser.h  ParserDataTypes.h  Predicate.h  PredicateImpl.h  Process.h  README  Recover.h  Session.h  (+32 more)
patches/: setunion.patch
scripts/: shutdown.sh  startup.sh
src/: Makefile.am  Makefile.am.full  Makefile.am.mmdb  Makefile.in
src/adapter/: Makefile.am  Makefile.in  SqlOdbcConnection.cxx  SqlOdbcStatement.cxx
src/base/: Config.cxx  DataType.cxx  Date.cxx  Logger.cxx  Makefile  Makefile.am  Makefile.in  Mutex.cxx  Time.cxx  Timestamp.cxx  TypeCompare.cxx  TypeConvert.cxx
src/cache/: Makefile  (+4 more)
src/gateway/: Makefile.am  Makefile.in  SqlGwConnection.cxx  SqlGwStatement.cxx
src/jdbc/: FieldInfo.java  JSqlConnection.cxx  JSqlConnection.h  JSqlConnection.java  JSqlError.java  JSqlStatement.cxx  JSqlStatement.h  JSqlStatement.java  JdbcSqlCallableStatement.java  JdbcSqlConnection.java  JdbcSqlConnectionPoolDataSource.java  JdbcSqlConnectionWrapper.java  JdbcSqlDataSource.java  JdbcSqlDatabaseMetaData.java  JdbcSqlDriver.java  JdbcSqlObjectFactory.java  JdbcSqlParameterMetaData.java  JdbcSqlPooledConnection.java  JdbcSqlPreparedStatement.java  JdbcSqlResultSet.java  JdbcSqlResultSetMetaData.java  JdbcSqlStatement.java  Makefile.am  Makefile.am.full  Makefile.am.mmdb  Makefile.in  Util.java  buildJdbcDriver.ksh
src/network/: Makefile.am  Makefile.in  NetworkPacket.cxx  NetworkTable.cxx  SqlNetworkHandler.cxx  TCPClient.cxx  TCPServer.cxx  UDPClient.cxx  UDPServer.cxx
src/oci/: Makefile.am  Makefile.in  SqlOciConnection.cxx  SqlOciStatement.cxx
src/odbc/: Makefile  Makefile.am  Makefile.am.full  Makefile.am.mmdb  Makefile.in  odbcCommon.cxx  odbcCommon.h  odbcDbc.cxx  odbcDbc.h  odbcDesc.cxx  odbcDesc.h  odbcEnv.cxx  odbcEnv.h  odbcError.cxx  odbcError.h  odbcState.cxx  odbcStmt.cxx  odbcStmt.h
src/server/: AggTableImpl.cxx  BucketIter.c  BucketList.c  BucketList.cxx  CatalogTables.c  CatalogTables.cxx  Chunk.c  Chunk.cxx  ChunkIterator.c  ChunkIterator.cxx  Condition.c  Condition.cxx  Config.cxx  Connection.c  Connection.cxx  DataType.c  DataType.cxx  Database.c  Database.cxx  DatabaseManagerImpl.c  DatabaseManagerImpl.cxx  Debug.c  Debug.cxx  FieldList.c  FieldList.cxx  HashIndex.c  HashIndex.cpp  HashIndex.cxx  Index.c  Index.cxx  LockListIter.c  LockManager.c  LockManager.cxx  Logger.c  Logger.cxx  Makefile  Makefile.am  Makefile.am.full  Makefile.am.mmdb  Makefile.in  (+30 more)
src/sql/: AlterTblStatement.cxx  CopyTblStatement.cxx  DclStatementImpl.cxx  DdlStatement.cxx  DelStatement.cxx  InsStatement.c  InsStatement.cxx  Makefile  Makefile.am  Makefile.am.full  Makefile.am.mmdb  Makefile.in  MetadataStatement.cxx  ParsedData.c  ParsedData.cxx  Parser.h  README  SelStatement.c  SelStatement.cxx  SqlFactory.cxx  SqlStatement.c  SqlStatement.cxx  SqlStatement.h  Statement.h  StatementFactory.cxx  UpdStatement.cxx  dmllex.c  dmllex.cxx  dmllex.lxx  dmlyacc.c  dmlyacc.cxx  dmlyacc.h  dmlyacc.y  dmlyacc.yxx
src/sqllog/: FileSend.cxx  Makefile.am  Makefile.in  Recover.cxx  SqlLogConnection.cxx  SqlLogStatement.cxx
src/storage/: AggTableImpl.cxx  BucketIter.cxx  BucketList.cxx  CatalogTables.cxx  CatalogTablesFk.cxx  CatalogTablesIdx.cxx  Chunk.cxx  ChunkIterator.cxx  Condition.cxx  Config.cxx  Connection.cxx  DataType.cxx  Database.cxx  DatabaseManagerImpl.cxx  DatabaseRecovery.cxx  DbMgrFkImpl.cxx  DbMgrIndexImpl.cxx  DbMgrTableImpl.cxx  Debug.cxx  Expression.cxx  FieldList.cxx  FixedHeapAllocator.cxx  HashIndex.cxx  HashMap.cxx  Index.cxx  JoinTableImpl.cxx  LockListIter.cxx  LockManager.cxx  LockTable.cxx  Logger.cxx  Makefile.am  Makefile.in  Mutex.cxx  OrderByTree.cxx  OrderTableImpl.cxx  PageInfo.cxx  PredicateEvalImpl.cxx  PredicateImpl.cxx  Process.cxx  SessionImpl.cxx  (+17 more)
src/tools/: Makefile.am  Makefile.am.full  Makefile.am.mmdb  Makefile.in  applyofflinelogs.cxx  cachetable.cxx  cacheverify.cxx  catalog.cxx  checkpoint.cxx  csqlasyncserver.cxx  csqlcacheserver.cxx  csqlcheckpointserver.cxx  csqlds.cxx  csqldump.cxx  csqlreplserver.cxx  csqlserver.cxx  csqlsqlserver.cxx  isql.c  isql.cxx  recover.cxx  redo.cxx  repltable.cxx
templates/: cpp
test/: CacheTestModules  Makefile  Makefile.am  Makefile.in  TestModules  TestModules.orig  csql.conf  execCacheTests.ksh  execTests.ksh  genReport.ksh  runLoadTest.sh  setMultiDsn.ksh
test/storage/: DMLTest.c  DMLTestChar.c  DMLThreadTest.c  Makefile  Makefile.am  Makefile.in  Range.c
tmptest/: Makefile  create.c  del.c  example.java  select.c  test.c  upd.c
win/: CSQL.sln  CSQL.vcxproj  CSQL.vcxproj.filters
(+3798 files in other folders)
