AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(csql, 2.7)

AC_LANG_CPLUSPLUS
AC_PROG_CXX

AM_PROG_LIBTOOL
AC_C_BIGENDIAN
AC_CANONICAL_HOST
AC_PROG_YACC
AM_PROG_LEX

case "${host_os}" in
  *linux* )
   OSTYPE=LINUX
    ;;
esac
case "${host_cpu}" in
  i686 | i386 )
    CPUTYPE=i686
    ;;
  x86_64 )
    CPUTYPE=x86_64
    ;;
  sparc )
    CPUTYPE=sparc
    ;;
  amd64 )
    CPUTYPE=x86_64
    ;;
esac
echo "#ifndef BUILD_H" >build.h
echo "#define BUILD_H" >>build.h
echo "#define CSQL" >>build.h
echo "#define ${OSTYPE}" >>build.h
echo "#define ${CPUTYPE}" >>build.h
echo "#endif" >>build.h
cp build.h include

AC_CHECK_HEADERS(stdio.h sys/mman.h sys/shm.h sys/errno.h crypt.h unistd.h \
        string.h sys/types.h sys/stat.h fcntl.h pthread.h math.h  \
        signal.h)



AC_OUTPUT(Makefile src/Makefile include/Makefile src/storage/Makefile src/sql/Makefile src/adapter/Makefile src/gateway/Makefile src/cache/Makefile src/network/Makefile src/sqllog/Makefile src/tools/Makefile src/jdbc/Makefile src/odbc/Makefile src/oci/Makefile src/sqlnetwork/Makefile)
