INCLUDES = 
METASOURCES = AUTO
include_SOURCES = CSql.h.cpp IndexManager.h
include_HEADERS = Allocator.h CatalogTables.h CSql.h Database.h \
	DatabaseManager.h DatabaseManagerImpl.h DataType.h Debug.h ErrorType.h Field.h Index.h \
	Info.h Lock.h Mutex.h NanoTimer.h os.h Predicate.h PredicateImpl.h README \
	Session.h SessionImpl.h Table.h TableImpl.h Transaction.h UserManager.h \
	UserManagerImpl.h
