INCLUDES = 
METASOURCES = AUTO
include_HEADERS = Allocator.h CatalogTables.h CSql.h Database.h \
				DatabaseManager.h DatabaseManagerImpl.h DataType.h Debug.h ErrorType.h Field.h Index.h \
				Info.h Lock.h Mutex.h NanoTimer.h os.h Predicate.h PredicateImpl.h 	Session.h \
			SessionImpl.h Table.h TableImpl.h Transaction.h UserManager.h 	UserManagerImpl.h \
			build.h Config.h Process.h Util.h Globals.h 	SqlConnection.h SqlStatement.h \
			AbsSqlConnection.h AbsSqlStatement.h SqlFactory.h sqlext.h sql.h sqltypes.h sqlucode.h \
	CacheTableLoader.h AggTableImpl.h
